--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -3,4 +3,9 @@
 @import "./components/_slick";
 @import "./layout/general";
 @import "./layout/header";
+@import "./layout/inedx";
+
+
+
+
 @import "./layout/footer";
