--- a/app/scss/utils/_variables.scss
+++ b/app/scss/utils/_variables.scss
@@ -11,9 +11,11 @@ $text-color: #000;
 $text-color-white: #fff;
 $color-top-menu: #ebebeb;
 $title-color: #000;
+$title-color-wite: #fff;
 
-$font-size-h1: 36px;
-$line-height-h1: 42px;
+
+$font-size-h1: 60px;
+$line-height-h1: 72px;
 $font-size-h2: 32px;
 $line-height-h2: 37px;
 $font-size-h3: 28px;
@@ -21,3 +23,16 @@ $line-height-h3: 32px;
 
 // color
 $bg-dark: #25282a;
+$bg-color-input: #4B4B4B;
+
+$gray: #979797;
+$red: #FF1B1B;
+$black: #000;
+$white: #fff;
+
+$border-gray: #D8D8D8;
+
+
+$btn-red: #FA4616;
+
+$shodow-red: rgba(250, 70, 22, 0.3);
