--- a/app/scss/base/_reset.scss
+++ b/app/scss/base/_reset.scss
@@ -27,7 +27,9 @@ body {
 	font-family: $base-font-family;
 	background-color: $base-bg;
 	height: 100%;
-	line-height: 1;
+	font-weight: 300;
+	line-height: $base-line-height;
+	color: $text-color;
 	position: relative;
 	font-size: $base-font-size !important;
 	-webkit-font-smoothing: antialiased;
