--- a/app/scss/utils/_mixins.scss
+++ b/app/scss/utils/_mixins.scss
@@ -30,8 +30,9 @@
 	background: linear-gradient(to $aside-invert, $color1 0%, $color2 100%);
 }
 
-@mixin font($font-s, $font-h, $font-c) {
+@mixin font($font-s, $font-h, $font-c, $font-w) {
 	font-size: $font-s;
 	line-height: $font-h;
 	color: $font-c;
+	font-weight: $font-w;
 }
