--- a/app/css/style.css
+++ b/app/css/style.css
@@ -23,15 +23,15 @@ button { border: none; background-color: transparent; cursor: pointer; }
 
 img, iframe { max-width: 100%; }
 
-@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-100.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-100"), url("../fonts/MuseoSans/MuseoSansCyrl-100.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-100.ttf") format("truetype"); font-weight: 100; font-style: normal; }
+@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-100.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-100"), url("../fonts/MuseoSans/MuseoSansCyrl-100.eot?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-100.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-100.ttf") format("truetype"); font-weight: 100; font-style: normal; }
 
-@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/"); src: local("../fonts/MuseoSans/MuseoSansCyrl-300"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-300.ttf") format("truetype"); font-weight: 300; font-style: normal; }
+@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-300.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-300"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-300.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-300.ttf") format("truetype"); font-weight: 300; font-style: normal; }
 
-@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/"); src: local("../fonts/MuseoSans/MuseoSansCyrl-500"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-500.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-500.ttf") format("truetype"); font-weight: 500; font-style: normal; }
+@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-500.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-500"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-500.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-500.ttf") format("truetype"); font-weight: 500; font-style: normal; }
 
-@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/"); src: local("../fonts/MuseoSans/MuseoSansCyrl-700"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-700.ttf") format("truetype"); font-weight: 700; font-style: normal; }
+@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-700.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-700"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-700.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-700.ttf") format("truetype"); font-weight: 700; font-style: normal; }
 
-@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/"); src: local("../fonts/MuseoSans/MuseoSansCyrl-900"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-900.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-900.ttf") format("truetype"); font-weight: 900; font-style: normal; }
+@font-face { font-family: 'Museo Sans Cyrl'; src: url("../fonts/MuseoSans/MuseoSansCyrl-900.eot"); src: local("../fonts/MuseoSans/MuseoSansCyrl-900"), url("../fonts/MuseoSans/?#iefix") format("embedded-opentype"), url("../fonts/MuseoSans/MuseoSansCyrl-900.woff") format("woff"), url("../fonts/MuseoSans/MuseoSansCyrl-900.ttf") format("truetype"); font-weight: 900; font-style: normal; }
 
 /* Slider */
 .slick-slider { position: relative; display: block; box-sizing: border-box; -webkit-touch-callout: none; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; -ms-touch-action: pan-y; touch-action: pan-y; -webkit-tap-highlight-color: transparent; }
@@ -78,6 +78,8 @@ img, iframe { max-width: 100%; }
 
 .btn-red { height: 75px; width: 350px; font-weight: 500; font-size: 24px; line-height: 29px; color: #fff; background-color: #fa4616; box-shadow: 0px 10px 35px rgba(250, 70, 22, 0.3); border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; }
 
+.btn-red:hover { background: #DA2E00; box-shadow: 0px 10px 35px rgba(216, 48, 3, 0.4); }
+
 .social-networks { display: -webkit-flex; display: -ms-flexbox; display: flex; }
 
 .social-networks > li:first-child { margin-right: 17px; }
@@ -90,7 +92,9 @@ img, iframe { max-width: 100%; }
 
 .title-text-border { color: #fff; font-weight: 900; font-size: 144px; line-height: 173px; text-shadow: -1px -1px 0 #d3d3d3, 1px -1px 0 #d3d3d3, -1px 1px 0 #d3d3d3, 1px 1px 0 #d3d3d3; text-align: center; margin-bottom: -38px; position: relative; z-index: -1; }
 
-.input-bark { height: 55px; width: 100%; background-color: #4b4b4b; border: none; padding: 0 21px; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; box-shadow: none; color: #fff; }
+.input-bark, .input-light { height: 55px; width: 100%; border: none; padding: 0 21px; border-radius: 0; -webkit-border-radius: 0; -moz-border-radius: 0; -ms-border-radius: 0; -o-border-radius: 0; box-shadow: none; font-size: 18px; line-height: 22px; }
+
+.input-bark { background-color: #4b4b4b; color: #fff; }
 
 .input-bark::-webkit-input-placeholder { color: #fff; opacity: 0.5; font-weight: 100; }
 
@@ -98,7 +102,17 @@ img, iframe { max-width: 100%; }
 
 .input-bark::placeholder { color: #fff; opacity: 0.5; font-weight: 100; }
 
+.input-light { background-color: #F1F1F1; margin-bottom: 10px; }
+
+.input-light::-webkit-input-placeholder { color: #797979; font-weight: 100; }
+
+.input-light:-ms-input-placeholder { color: #797979; font-weight: 100; }
+
+.input-light::placeholder { color: #797979; font-weight: 100; }
+
 .cards-dark { background-color: #25282a; color: #fff; box-shadow: 0px 70px 100px rgba(0, 0, 0, 0.3); padding: 37px 95px 97px; }
+
+.box-shadow { box-shadow: 0px 100px 100px rgba(0, 0, 0, 0.08); }
 
 .spinner { width: 255px; position: relative; text-align: center; }
 
@@ -117,6 +131,17 @@ img, iframe { max-width: 100%; }
 .spinner__btn.spinner-up { right: 0; }
 
 .spinner__btn.spinner-down { left: 0; }
+
+/*style for checkbox*/
+.label-checkbox { display: block; position: relative; width: 15px; height: 15px; margin: 0 15px 0 0; cursor: pointer; -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
+
+.label-checkbox > input { position: absolute; opacity: 0; cursor: pointer; }
+
+.label-checkbox > input:checked ~ .checkmark:after { display: block; }
+
+.label-checkbox .checkmark { position: absolute; left: 0; top: 0; height: 15px; width: 15px; background-color: transparent; border: 1px solid #B1B1B1; }
+
+.label-checkbox .checkmark::after { content: ""; position: absolute; display: none; left: 0; top: -1px; width: 15px; height: 15px; background: url(../image/icons/checked.svg) no-repeat center center; }
 
 /*
 ================================================================================
@@ -163,11 +188,15 @@ img, iframe { max-width: 100%; }
 
 .menu__list > li a { display: inline-block; position: relative; color: #ebebeb; }
 
+.menu__list > li a:hover { color: #FF9300; }
+
+.menu__list > li a.active { color: #FA4616; }
+
 .menu__list > li .counter { position: absolute; top: 0; right: 0; font-weight: 300; font-size: 10px; line-height: 12px; padding: 1px 4px 1.5px; background-color: #ff1b1b; border-radius: 6.5px; -webkit-border-radius: 6.5px; -moz-border-radius: 6.5px; -ms-border-radius: 6.5px; -o-border-radius: 6.5px; transform: translate(50%, -40%); -webkit-transform: translate(50%, -40%); -moz-transform: translate(50%, -40%); -ms-transform: translate(50%, -40%); -o-transform: translate(50%, -40%); }
 
 @media screen and (min-width: 1350px) { header .container { max-width: 1320px; } }
 
-.first-screen { margin-top: -2px; height: 640; background-color: #25282a; position: relative; color: #fff; }
+.first-screen { margin-top: -2px; height: 640px; background-color: #25282a; position: relative; color: #fff; overflow: hidden; }
 
 .first-screen__line { position: absolute; bottom: 0; left: 0; width: 16%; }
 
@@ -175,7 +204,7 @@ img, iframe { max-width: 100%; }
 
 .first-screen__text { max-width: 458px; font-size: 18px; line-height: 22px; margin-bottom: 67px; }
 
-.slider { height: 640px; position: relative; }
+.slider { position: relative; }
 
 .slider__item { position: relative; width: 100%; height: 640px; }
 
@@ -221,24 +250,128 @@ img, iframe { max-width: 100%; }
 
 .price__form .spinner > span { position: absolute; top: -36px; left: 50%; transform: translateX(-50%); -webkit-transform: translateX(-50%); -moz-transform: translateX(-50%); -ms-transform: translateX(-50%); -o-transform: translateX(-50%); }
 
-.assortment { background-color: #25282a; padding: 87px 0 154px; position: relative; z-index: 0; }
+.assortment { background-color: #25282a; padding: 87px 0 124px; position: relative; z-index: 0; }
 
 .assortment .title-text-border { color: #25282a; text-shadow: -1px -1px 0 #707070, 1px -1px 0 #707070, -1px 1px 0 #707070, 1px 1px 0 #707070; }
 
-.assortment__card { position: relative; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 260px; width: 100%; color: #fff; }
+.assortment__card { position: relative; display: -webkit-flex; display: -ms-flexbox; display: flex; height: 260px; width: 100%; color: #fff; margin-bottom: 30px; }
 
 .assortment__card > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
 
-.assortment__desc { position: absolute; top: 0; left: 0; }
+.assortment__card:hover { color: #fff; box-shadow: 0px 20px 50px rgba(0, 0, 0, 0.4); }
+
+.assortment__card:hover .assortment__hover { opacity: 1; }
+
+.assortment__desc { position: absolute; top: 38px; left: 39px; right: 39px; }
+
+.assortment__desc > p { margin-top: 16px; width: 60%; font-weight: 300; font-size: 18px; line-height: 22px; }
+
+.assortment__hover { opacity: 0; position: absolute; left: 39px; bottom: 36px; font-weight: 100; font-size: 14px; line-height: 17px; transition: opacity 0.4s; -webkit-transition: opacity 0.4s; -moz-transition: opacity 0.4s; -ms-transition: opacity 0.4s; -o-transition: opacity 0.4s; }
+
+.assortment__hover img { margin-left: 10px; }
+
+.sale__title { font-weight: 900; font-size: 36px; line-height: 43px; margin-bottom: 43px; color: #fff; }
+
+.sale__timer > span { font-weight: 700; margin-bottom: 16px; display: block; }
+
+.sale__timer .timer { display: -webkit-flex; display: -ms-flexbox; display: flex; width: 285px; }
+
+.sale__timer .timer > li { font-size: 14px; line-height: 17px; text-align: center; }
+
+.sale__timer .timer > li > span { height: 55px; min-width: 65px; font-weight: 900; font-size: 36px; line-height: 43px; background-color: #454545; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-bottom: 8px; }
+
+.sale__timer .timer > li > span::after { content: ':'; padding-left: 8px; }
+
+.sale__timer .timer > li > span.days { padding-left: 22px; }
+
+.sale__timer .timer > li > span.minutes { padding-right: 6px; }
+
+.sale__timer .timer > li > span.seconds { background-color: #ff1b1b; }
+
+.sale__timer .timer > li > span.seconds::after { display: none; }
+
+.sale__timer .timer > li > small { opacity: 0.5; }
+
+.slider-sale__item { padding: 0; }
+
+.slider-sale__item .wrrap { -webkit-flex: 0 0 59.9%; -ms-flex: 0 0 59.9%; flex: 0 0 59.9%; padding: 75px 48px; }
+
+.slider-sale__image { height: 400px; -webkit-flex: 0 0 40.1%; -ms-flex: 0 0 40.1%; flex: 0 0 40.1%; }
+
+.calendar-section { padding: 125px 0; }
+
+.calendar-section__title { font-weight: 900; font-size: 36px; line-height: 43px; color: #000; margin-bottom: 16px; width: 65%; }
+
+.calendar-section__title + p { width: 55%; }
+
+.calendar-section__block { margin-top: 35px; display: -webkit-flex; display: -ms-flexbox; display: flex; }
+
+.calendar-section__form { -webkit-flex: 0 0 51.2%; -ms-flex: 0 0 51.2%; flex: 0 0 51.2%; padding: 40px 75px 50px 48px; }
+
+.calendar-section__form .btn-red { width: 100%; margin: 20px 0 30px; }
+
+.calendar-section__form .group-checkobox { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; }
+
+.calendar-section__form .group-checkobox > p { margin: 0; font-weight: 300; font-size: 14px; line-height: 17px; color: #B1B1B1; }
+
+.calendar-section__form .group-checkobox > p > a { color: #B1B1B1; position: relative; }
+
+.calendar-section__form .group-checkobox > p > a::after { content: ''; position: absolute; left: 0; right: 0; bottom: 0; display: block; border-top: 1px solid #B1B1B1; }
+
+.calendar-section__img { -webkit-flex: 0 0 48.8%; -ms-flex: 0 0 48.8%; flex: 0 0 48.8%; }
+
+.calendar-section__img > img { width: 100%; height: 100%; -o-object-fit: cover; object-fit: cover; }
+
+.calendar { margin-bottom: 40px; background: transparent; }
+
+.calendar__header { margin-bottom: 41px; text-align: left; font-weight: 700; }
+
+.calendar__header > p { position: relative; display: inline-block; color: #777777; margin-left: 20px; }
+
+.calendar__header > p.active { color: #000; }
+
+.calendar__header > p.active::after { content: ''; display: block; border-top: 3px solid #FF9300; position: absolute; bottom: -6px; left: 0; right: 0; }
+
+.calendar > ul { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-flex-wrap: wrap; -ms-flex-wrap: wrap; flex-wrap: wrap; }
+
+.calendar > ul > li { width: 44px; height: 44px; font-weight: 700; cursor: pointer; display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-align-items: center; -ms-flex-align: center; align-items: center; -webkit-justify-content: center; -ms-flex-pack: center; justify-content: center; margin-left: 15px; }
+
+.calendar > ul > li:nth-child(7n) { margin-right: 0; }
+
+.calendar > ul > li.empty { pointer-events: none; }
+
+.calendar > ul > li:hover { color: #FA4616; }
+
+.calendar > ul > li.active { background-color: #fa4616; color: #fff; }
 
 /*
 ================================================================================
 |                                     FOOTER                                   |
 ================================================================================
 */
-.footer { background-color: #25282a; padding: 93px 0 42px; }
+.footer { background-color: #25282a; padding: 93px 0 42px; font-weight: 300; font-size: 14px; line-height: 26px; color: #fff; }
 
-.call-us { color: #fff; margin-bottom: 94px; }
+.footer__logo { width: 180px; display: -webkit-flex; display: -ms-flexbox; display: flex; margin-bottom: 9px; }
+
+.footer__logo > img { width: 100%; }
+
+.footer__logo + p { font-weight: 100; line-height: 17px; }
+
+.footer__middle { margin-top: 57px; margin-bottom: 20px; }
+
+.footer__nav { display: -webkit-flex; display: -ms-flexbox; display: flex; -webkit-justify-content: space-between; -ms-flex-pack: justify; justify-content: space-between; margin-top: 14px; }
+
+.footer__menu li > a { color: #fff; }
+
+.footer__menu .counter { display: inline-block; font-weight: 300; font-size: 10px; line-height: 12px; padding: 1px 4px 2px; background-color: #ff1b1b; border-radius: 6.5px; -webkit-border-radius: 6.5px; -moz-border-radius: 6.5px; -ms-border-radius: 6.5px; -o-border-radius: 6.5px; margin-left: 4px; }
+
+.footer__link { display: block; color: #fff; text-align: center; text-decoration: underline; opacity: 0.8; }
+
+.footer__line { width: 100%; opacity: 0.1; border: 1px solid #fff; }
+
+.footer .who-creted { color: #fff; font-weight: 100; margin-bottom: 8px; display: block; }
+
+.call-us { color: #fff; margin-bottom: 94px; font-size: 18px; line-height: 22px; }
 
 .call-us__meneger { font-weight: 100; text-align: center; }
 
