--- a/app/scss/layout/_footer.scss
+++ b/app/scss/layout/_footer.scss
@@ -6,16 +6,89 @@
 .footer {
     background-color: $bg-dark;
     padding: 93px 0 42px;
+    font-weight: 300;
+    font-size: 14px;
+    line-height: 26px;
+    color: $text-color-white;
 
+    &__logo {
+        width: 180px;
+        display: flex;
+        margin-bottom: 9px;
+
+        >img {
+            width: 100%;
+        }
+
+        +p {
+            font-weight: 100;
+            line-height: 17px;
+        }
+    }
+
+    &__middle {
+        margin-top: 57px;
+        margin-bottom: 20px;
+    }
+
+    &__nav {
+        display: flex;
+        justify-content: space-between;
+        margin-top: 14px;
+    }
+
+    &__menu {
+        li {
+            >a {
+                color: $text-color-white;
+            }
+        }
+
+        .counter {
+            display: inline-block;
+            font-weight: 300;
+            font-size: 10px;
+            line-height: 12px;
+            padding: 1px 4px 2px;
+            background-color: $red;
+            @include radius(6.5px);
+            margin-left: 4px;
+        }
+    }
+
+    &__link {
+        display: block;
+        color: $text-color-white;
+        text-align: center;
+        text-decoration: underline;
+        opacity: 0.8;
+    }
+
+    &__line {
+        width: 100%;
+        opacity: 0.1;
+        border: 1px solid $white;
+    }
+
+    .who-creted {
+        color: $text-color-white;
+        font-weight: 100;
+        margin-bottom: 8px;
+        display: block;
+    }
 }
 
 .call-us {
     color: $text-color-white;
     margin-bottom: 94px;
+    font-size: 18px;
+    line-height: 22px;
+
     &__meneger {
         font-weight: 100;
         text-align: center;
     }
+
     &__img {
         display: block;
         width: 159px;
@@ -23,38 +96,45 @@
         @include radius(50%);
         overflow: hidden;
         margin-bottom: 20px;
-        >img{
+
+        >img {
             width: 100%;
             height: 100%;
             object-fit: cover;
         }
     }
+
     &__title {
         font-weight: 700;
         font-size: 36px;
         line-height: 43px;
         margin-bottom: 8px;
     }
+
     &__info {
-        .phone{
+        .phone {
             margin-bottom: 20px;
+
             &__number {
                 font-size: 60px;
                 line-height: 72px;
             }
+
             .arrow-down {
                 position: relative;
                 top: -20px;
                 margin-left: 9px;
                 width: 34px
-        }
+            }
         }
     }
+
     &__form {
         margin-top: 35px;
         display: flex;
         align-items: center;
         justify-content: space-between;
+
         .btn-red {
             min-width: 255px;
             margin-left: 30px;
@@ -62,14 +142,10 @@
     }
 }
 
-@media screen and (max-width: 1199.8px) {
-}
+@media screen and (max-width: 1199.8px) {}
 
-@media screen and (max-width: 991.8px) {
-}
+@media screen and (max-width: 991.8px) {}
 
-@media screen and (max-width: 767.8px) {
-}
+@media screen and (max-width: 767.8px) {}
 
-@media screen and (max-width: 575.8px) {
-}
+@media screen and (max-width: 575.8px) {}
