--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,8 +4,7 @@
 @import "./layout/general";
 @import "./layout/header";
 @import "./layout/inedx";
-
-
+@import "./layout/calendar";
 
 
 @import "./layout/footer";
